added vehicleImage in vehicleCard
